# leitordenotas

./: .gitignore  LICENSE  README.md  dowloadPDF.py  extractItems.py  generateKey.py  main.py  payment_calculator.py  pyproject.toml  requirements.txt  teste.py
