[project]
name = "leitordenotas"
version = "0.1.0"
description = "Sistema de leitura de notas fiscais"
authors = [
    {name = "Israel"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "fitz (>=0.0.1.dev2,<0.0.2)",
    "pandas (>=2.3.1,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pyzbar (>=0.1.9,<0.2.0)",
    "selenium (>=4.34.2,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
